deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mochi-mqtt
  name: mochi-mqtt
spec:
  port:
    targetPort: mqtt
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: mochi-mqtt
    weight: 100
  wildcardPolicy: None
